# opengl-rendering-engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  imgui.ini  vcpkg.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/docs/: README.md
assets/scenes/: empty-void-with-cube.yml
assets/shaders/: base.frag  base.vert
demo/: camera_controller.hpp  cube.hpp  cube_controller.hpp  demo.hpp  main.cpp
demo/assets/scenes/: empty-void-with-cube.yml
demo/assets/shaders/: base.frag
ore/ore/: engine.hpp
ore/ore/engine/core/: application.cpp  application.hpp  input.cpp  input.hpp  node_factory.hpp  scene_loader.cpp  window.cpp  window.hpp
ore/ore/engine/events/: event.hpp  key.hpp  mouse.hpp  window.hpp
ore/ore/engine/graphics/hardware_interfaces/: framebuffer.cpp  framebuffer.hpp  graphics_context.cpp  graphics_context.hpp  imgui_renderer.cpp  imgui_renderer.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
ore/ore/engine/graphics/renderers/: irenderer.hpp  render_graph.cpp  render_graph.hpp
ore/ore/engine/imgui/: imgui_manager.cpp  imgui_manager.hpp
ore/ore/engine/os/: window.cpp  window.hpp
ore/ore/engine/renderer/: README.md  behavior.hpp  camera.cpp  camera.hpp  node.cpp  node.hpp  renderable.cpp  renderable.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  world_node.cpp  world_node.hpp
ore/ore/engine/renderer/gui/: gui_manager.cpp  gui_manager.hpp  gui_window.cpp  gui_window.hpp
ore/ore/engine/scene/: README.md  scene_manager.cpp  scene_manager.hpp
ore/ore/engine/utils/: filesystem.cpp
ore/ore/libs/glad/: glad.h
ore/ore/platform/glfw/: glfw_window.cpp  glfw_window.hpp
ore/ore/platform/opengl/: gl.hpp  gl_context.cpp  gl_context.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_functions.cpp  gl_functions.hpp  gl_imgui_renderer.cpp  gl_imgui_renderer.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_texture.cpp  gl_texture.hpp
rock/: main.cpp  rock.hpp
rock/assets/scenes/: empty.yml
rock/gui/: dock.hpp  gui_window.hpp
rock/gui/scenes/: scene_manager.cpp  scene_manager.hpp  scene_view.hpp
rock/ui/: editor.cpp  editor.hpp
rock/ui/renderer/: render_graph.cpp  render_graph.hpp
rock/ui/scenes/: scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
src/: main.cpp
src/demo/: camera_controller.hpp  cube.hpp  cube_controller.hpp  main.cpp
src/engine/: application.cpp  application.hpp  camera.cpp  camera.hpp  filesystem.cpp  filesystem.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/engine/core/: application.cpp  application.hpp  input.cpp  input.hpp  node_factory.hpp  scene_loader.cpp  scene_loader.hpp  window.cpp  window.hpp
src/engine/events/: event.hpp  key.hpp  mouse.hpp  window.hpp
src/engine/renderable/: cube.hpp  renderable.cpp  renderable.hpp  triangle.hpp
src/engine/renderer/: behavior.hpp  camera.cpp  camera.hpp  node.cpp  node.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  world_node.cpp  world_node.hpp
src/engine/utils/: filesystem.cpp
src/libs/glad/: glad.h
src/ore/: engine.hpp
src/ore/engine/core/: application.cpp  application.hpp  input.cpp  input.hpp  scene_loader.cpp  scene_loader.hpp  window.cpp  window.hpp
src/ore/engine/events/: event.hpp  key.hpp  mouse.hpp  window.hpp
src/ore/engine/renderer/: behavior.hpp  camera.cpp  camera.hpp  node.cpp  node.hpp  renderable.cpp  renderable.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  world_node.cpp  world_node.hpp
src/ore/engine/utils/: filesystem.cpp  filesystem.hpp
src/ore/libs/glad/: glad.c  glad.h
